<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.billsplitter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.billsplitter.ui.activity.ActivityFragment"
        android:label="@string/menu_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.billsplitter.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />


</navigation>